fix: Arrumado config app java